Prevent line wrap in search results

--- a/css/index.css
+++ b/css/index.css
@@ -385,6 +385,8 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 
 .result {
   height: 2.5rem;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .result.selected {
